
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 void* encode (unsigned char) ;
 scalar_t__ malloc (int) ;
 int strlen (char*) ;

char *encode_base64(int size, unsigned char *src) {

int i;
char *out, *p;

if(!src)
return ((void*)0);

if(!size)
size= strlen((char *)src);

out= (char *)malloc(sizeof(char)*size*4/3+4);

p= out;

for(i=0; i<size; i+=3) {

unsigned char b1=0, b2=0, b3=0, b4=0, b5=0, b6=0, b7=0;

b1 = src[i];

if(i+1<size)
b2 = src[i+1];

if(i+2<size)
b3 = src[i+2];

b4= b1>>2;
b5= ((b1&0x3)<<4)|(b2>>4);
b6= ((b2&0xf)<<2)|(b3>>6);
b7= b3&0x3f;

*p++= encode(b4);
*p++= encode(b5);

if(i+1<size) {
*p++= encode(b6);
} else {
*p++= '=';
}

if(i+2<size) {
*p++= encode(b7);
} else {
*p++= '=';
}

}

return out;

}
